--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Select HDD and Scan</h2>
                 <p class="text-gray-600 text-sm mb-3">Choose a folder (including subfolders) and assign a Disk ID.</p>
                 <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-                    <input type="text" id="diskId" placeholder="Disk ID (e.g., 2-HD1TB)" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
+                    <input type="text" id="diskId" placeholder="Disk ID (e.g., 117-HD2TB)" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
                     <input type="file" id="diskFolder" webkitdirectory directory multiple class="p-2 border rounded-lg">
                     <button onclick="scanDisk()" class="bg-teal-500 text-white p-2 rounded-lg hover:bg-teal-600 transition tooltip" data-tooltip="Scan for video files in folder and subfolders">Scan Videos</button>
                 </div>
@@ -99,12 +99,12 @@
 
             <section id="scannedTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Scanned Video Files</h2>
-                <p class="text-gray-600 text-sm mb-3">View new video files (without metadata) from selected folder and subfolders, sorted alphabetically.</p>
+                <p class="text-gray-600 text-sm mb-3">View unarchived video files from selected folder and subfolders, sorted alphabetically.</p>
                 <div class="overflow-x-auto">
                     <table class="w-full border-collapse mb-3">
                         <thead>
                             <tr class="bg-teal-50">
-                                <th class="file-path-column p-3 border text-left">File Path</th>
+                                <th class="file-path-column p-3 border text-left">Relative File Path</th>
                                 <th class="actions-column p-3 border text-left">Action</th>
                             </tr>
                         </thead>
@@ -116,7 +116,7 @@
             <section id="metadataTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Manage Metadata</h2>
                 <p class="text-gray-600 text-sm mb-3">Add or edit metadata while previewing the video. Episode Details are auto-corrected to sentence case on save.</p>
-                <input type="text" id="metadataFilePath" placeholder="Selected file path" class="p-2 border rounded-lg mb-4 w-full" readonly>
+                <input type="text" id="metadataFilePath" placeholder="Selected relative file path" class="p-2 border rounded-lg mb-4 w-full" readonly>
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                     <div id="metadataFields" class="grid grid-cols-1 gap-4">
                         <div class="flex flex-col sm:flex-row gap-3 items-start">
@@ -167,7 +167,7 @@
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Search Files</h2>
                 <p class="text-gray-600 text-sm mb-3">Find archived files by Disk ID, programme name, episode number, telecast date, or other metadata (e.g., details). Use AND (all criteria must match) or OR (any criterion matches). Results are sorted by programme and episode number.</p>
                 <div class="grid grid-cols-1 sm:grid-cols-5 gap-4 mb-4">
-                    <input type="text" id="searchDiskId" placeholder="Search Disk ID (e.g., 2-HD1TB)" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
+                    <input type="text" id="searchDiskId" placeholder="Search Disk ID (e.g., 117-HD2TB)" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
                     <select id="searchProgramName" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
                         <option value="">All Programmes</option>
                     </select>
@@ -175,8 +175,8 @@
                     <input type="date" id="searchTelecastDate" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
                     <input type="text" id="searchMetadata" placeholder="Search Metadata (e.g., Drama, Sci-Fi)" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
                     <select id="searchLogic" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-teal-300">
-                        <option value="AND">AND (All criteria)</option>
-                        <option value="OR">OR (Any criterion)</option>
+                        <option value="AND">AND (all criteria)</option>
+                        <option value="OR">OR (any criterion)</option>
                     </select>
                 </div>
                 <button onclick="searchFiles()" class="bg-teal-500 text-white p-2 rounded-lg hover:bg-teal-600 transition tooltip" data-tooltip="Search for files">Search Files</button>
@@ -201,7 +201,7 @@
                     <table class="w-full border-collapse">
                         <thead>
                             <tr class="bg-teal-50">
-                                <th class="file-path-column p-3 border text-left">File Path</th>
+                                <th class="file-path-column p-3 border text-left">Relative File Path</th>
                                 <th class="disk-id-column p-3 border text-left">Disk ID</th>
                                 <th class="metadata-column p-3 border text-left">Metadata</th>
                                 <th class="actions-column p-3 border text-left">Actions</th>
@@ -214,7 +214,7 @@
         </main>
 
         <footer class="bg-teal-100 rounded-lg shadow-md mt-6 text-center text-gray-600 text-sm">
-            <p>Video File Manager v2.4 | Built for secure video organization with cloud sync | September 29, 2025</p>
+            <p>Video File Manager v2.5 | Built for secure video organization with cloud sync | September 29, 2025</p>
         </footer>
     </div>
 
@@ -375,6 +375,11 @@
 
         function sanitizeId(path) {
             return path.replace(/[\/: ]/g, '_').replace(/[^a-zA-Z0-9._-]/g, '');
+        }
+
+        function normalizePath(filePath) {
+            // Remove drive letter (e.g., 'D:/' or 'E:/') and normalize separators
+            return filePath.replace(/^[a-zA-Z]:[\\\/]/, '').replace(/\\/g, '/');
         }
 
         window.addEventListener('beforeunload', function(event) {
@@ -645,25 +650,29 @@
                 const newFiles = [];
                 const existingFiles = new Set();
                 const snapshot = await window.firebase.getDocs(window.firebase.collection(window.firebase.firestore, 'files'));
-                snapshot.docs.forEach(doc => existingFiles.add(doc.data().filePath));
+                snapshot.docs.forEach(doc => existingFiles.add(normalizePath(doc.data().filePath)));
                 const nonArchivedFiles = [];
                 currentFiles.forEach((file, index) => {
-                    const filePath = file.webkitRelativePath;
-                    if (!isExcluded(filePath)) {
-                        if (!existingFiles.has(filePath)) {
-                            window.firebase.setDoc(window.firebase.doc(window.firebase.firestore, 'files', sanitizeId(filePath)), { filePath, diskId: inputDiskId, metadata: {} })
-                                .then(() => console.log('Added file:', filePath))
-                                .catch(error => console.error('Error adding file:', filePath, error));
-                            newFiles.push(filePath);
+                    const relativePath = normalizePath(file.webkitRelativePath);
+                    if (!isExcluded(relativePath)) {
+                        if (!existingFiles.has(relativePath)) {
+                            window.firebase.setDoc(window.firebase.doc(window.firebase.firestore, 'files', sanitizeId(relativePath)), {
+                                filePath: relativePath,
+                                diskId: inputDiskId,
+                                metadata: {}
+                            })
+                                .then(() => console.log('Added file:', relativePath))
+                                .catch(error => console.error('Error adding file:', relativePath, error));
+                            newFiles.push(relativePath);
                         }
-                        nonArchivedFiles.push({ filePath, file });
+                        nonArchivedFiles.push({ filePath: relativePath, file });
                         progressFill.style.width = `${((index + 1) / currentFiles.length) * 100}%`;
                     }
                 });
 
                 const snapshot2 = await window.firebase.getDocs(window.firebase.query(window.firebase.collection(window.firebase.firestore, 'files'), window.firebase.where('metadata', '==', {})));
                 const displayFiles = nonArchivedFiles
-                    .filter(f => snapshot2.docs.some(doc => doc.data().filePath === f.filePath))
+                    .filter(f => snapshot2.docs.some(doc => normalizePath(doc.data().filePath) === f.filePath))
                     .sort((a, b) => a.filePath.localeCompare(b.filePath, undefined, { sensitivity: 'base' }));
 
                 displayFiles.forEach(({ filePath, file }) => {
@@ -708,7 +717,8 @@
                 alert('Firestore is not initialized. Please check Firebase configuration and reload the page.');
                 return;
             }
-            document.getElementById('metadataFilePath').value = filePath;
+            const normalizedPath = normalizePath(filePath);
+            document.getElementById('metadataFilePath').value = normalizedPath;
             const programName = document.getElementById('programName');
             const otherProgramme = document.getElementById('otherProgramme');
             const episodeNumber = document.getElementById('episodeNumber');
@@ -734,7 +744,7 @@
                 </div>
             `;
 
-            const file = currentFiles.find(f => f.webkitRelativePath === filePath);
+            const file = currentFiles.find(f => normalizePath(f.webkitRelativePath) === normalizedPath);
             if (file) {
                 videoPlayer.src = URL.createObjectURL(file);
                 videoPlayerContainer.classList.remove('hidden');
@@ -744,7 +754,7 @@
             }
 
             try {
-                const snapshot = await window.firebase.getDocs(window.firebase.query(window.firebase.collection(window.firebase.firestore, 'files'), window.firebase.where('filePath', '==', filePath)));
+                const snapshot = await window.firebase.getDocs(window.firebase.query(window.firebase.collection(window.firebase.firestore, 'files'), window.firebase.where('filePath', '==', normalizedPath)));
                 if (snapshot.empty) {
                     alert('File not found in Firestore.');
                     return;
@@ -823,7 +833,8 @@
             }
 
             try {
-                const snapshot = await window.firebase.getDocs(window.firebase.query(window.firebase.collection(window.firebase.firestore, 'files'), window.firebase.where('filePath', '==', filePath)));
+                const normalizedPath = normalizePath(filePath);
+                const snapshot = await window.firebase.getDocs(window.firebase.query(window.firebase.collection(window.firebase.firestore, 'files'), window.firebase.where('filePath', '==', normalizedPath)));
                 if (snapshot.empty) {
                     alert('File not found!');
                     return;
@@ -912,16 +923,17 @@
                     });
 
                 filesWithMetadata.forEach(file => {
+                    const normalizedPath = normalizePath(file.filePath);
                     const metadataStr = Object.entries(file.metadata)
                         .map(([k, v]) => `${k}: ${v}`)
                         .join('; ');
-                    const isAccessible = currentFiles.some(f => f.webkitRelativePath === file.filePath);
+                    const isAccessible = currentFiles.some(f => normalizePath(f.webkitRelativePath) === normalizedPath);
                     const row = document.createElement('tr');
                     row.className = isAccessible ? 'bg-green-100' : 'bg-red-100';
                     row.setAttribute('data-tooltip', isAccessible ? 'File accessible' : 'File not found, reselect folder');
                     row.classList.add('tooltip');
                     row.innerHTML = `
-                        <td class="file-path-column p-3 border">${file.filePath}</td>
+                        <td class="file-path-column p-3 border">${normalizedPath}</td>
                         <td class="disk-id-column p-3 border">${file.diskId}</td>
                         <td class="metadata-column p-3 border">${metadataStr}</td>
                         <td class="actions-column p-3 border">
@@ -939,7 +951,8 @@
         }
 
         function playVideoInSearch(filePath) {
-            const file = currentFiles.find(f => f.webkitRelativePath === filePath);
+            const normalizedPath = normalizePath(filePath);
+            const file = currentFiles.find(f => normalizePath(f.webkitRelativePath) === normalizedPath);
             const videoPlayer = document.getElementById('videoPlayer');
             if (videoPlayer.src) {
                 URL.revokeObjectURL(videoPlayer.src);
@@ -955,7 +968,8 @@
         }
 
         function copyFile(filePath) {
-            const file = currentFiles.find(f => f.webkitRelativePath === filePath);
+            const normalizedPath = normalizePath(filePath);
+            const file = currentFiles.find(f => normalizePath(f.webkitRelativePath) === normalizedPath);
             if (!file) {
                 alert('Video file not found. Please reselect the folder containing this file.');
                 return;
@@ -969,7 +983,7 @@
                     alert('Please select a destination folder.');
                     return;
                 }
-                const fileName = filePath.split('/').pop();
+                const fileName = normalizedPath.split('/').pop();
                 const link = document.createElement('a');
                 link.href = URL.createObjectURL(file);
                 link.download = fileName;
@@ -1047,22 +1061,23 @@
 
                 let alertMessage = files.length ? `Found ${files.length} file(s): ` : 'No files match your search.';
                 if (files.length) {
-                    const matches = files.map(file => `Disk ID: ${file.diskId}, Path: ${file.filePath}`).join('; ');
+                    const matches = files.map(file => `Disk ID: ${file.diskId}, Path: ${normalizePath(file.filePath)}`).join('; ');
                     alertMessage += matches;
                 }
                 alert(alertMessage);
 
                 files.forEach(file => {
+                    const normalizedPath = normalizePath(file.filePath);
                     const metadataStr = Object.entries(file.metadata)
                         .map(([k, v]) => `${k}: ${v}`)
                         .join('; ');
-                    const isAccessible = currentFiles.some(f => f.webkitRelativePath === file.filePath);
+                    const isAccessible = currentFiles.some(f => normalizePath(f.webkitRelativePath) === normalizedPath);
                     const row = document.createElement('tr');
                     row.className = isAccessible ? 'bg-green-100' : 'bg-red-100';
                     row.setAttribute('data-tooltip', isAccessible ? 'File accessible' : 'File not found, reselect folder');
                     row.classList.add('tooltip');
                     row.innerHTML = `
-                        <td class="file-path-column p-3 border">${file.filePath}</td>
+                        <td class="file-path-column p-3 border">${normalizedPath}</td>
                         <td class="disk-id-column p-3 border">${file.diskId}</td>
                         <td class="metadata-column p-3 border">${metadataStr}</td>
                         <td class="actions-column p-3 border">
@@ -1094,12 +1109,13 @@
                 filesWithMetadata.forEach(file => {
                     Object.keys(file.metadata).forEach(key => metadataKeys.add(key));
                 });
-                const headers = ['File Path', 'Disk ID', ...metadataKeys];
+                const headers = ['Relative File Path', 'Disk ID', ...metadataKeys];
 
                 let csvContent = 'data:text/csv;charset=utf-8,' + headers.map(h => `"${h.replace(/"/g, '""')}"`).join(',') + '\n';
                 filesWithMetadata.forEach(file => {
+                    const normalizedPath = normalizePath(file.filePath);
                     const row = [
-                        `"${file.filePath.replace(/"/g, '""')}"`,
+                        `"${normalizedPath.replace(/"/g, '""')}"`,
                         `"${file.diskId.replace(/"/g, '""')}"`,
                         ...headers.slice(2).map(key => {
                             const value = file.metadata[key] || '';
@@ -1174,7 +1190,11 @@
                     const fileSnapshot = await window.firebase.getDocs(window.firebase.collection(window.firebase.firestore, 'files'));
                     fileSnapshot.forEach(doc => batch.delete(doc.ref));
                     data.files.forEach(file => {
-                        batch.set(window.firebase.doc(window.firebase.firestore, 'files', sanitizeId(file.filePath)), file);
+                        const normalizedPath = normalizePath(file.filePath);
+                        batch.set(window.firebase.doc(window.firebase.firestore, 'files', sanitizeId(normalizedPath)), {
+                            ...file,
+                            filePath: normalizedPath
+                        });
                     });
                     const progSnapshot = await window.firebase.getDocs(window.firebase.collection(window.firebase.firestore, 'programmes'));
                     progSnapshot.forEach(doc => batch.delete(doc.ref));
